bin/testsuite/tests/compiler/src/errors/compiler3703.swg
#global testerror "Err0023"
func toto(xx: bool)
{
    var x: u32 = xx ? 1'u32 : -1'f32
}
